<package>
  <name>driver_common</name>
  <version>1.6.0</version>
  <description>A framework for writing drivers that helps with runtime reconfiguration, diagnostics and self-test.

    This package is deprecated.</description>
  <maintainer email="chadrockey@willowgarage.com">Chad Rockey</maintainer>

  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/driver_base</url>
  <url type="bugtracker">https://github.com/ros-drivers/driver_common/issues</url>
  <url type="repository">https://github.com/ros-drivers/driver_common</url>


  <author>Blaise Gassend</author>

  <build_depend>roscpp</build_depend>
  <build_depend>self_test</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>self_test</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <test_depend>roscpp</test_depend>
  <test_depend>self_test</test_depend>
  <test_depend>diagnostic_updater</test_depend>
  <test_depend>dynamic_reconfigure</test_depend>

</package>
